--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	overflow-x: hidden;
 }
 
 a {
@@ -13,4 +14,19 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+
+.glow {
+	background-color: #fff;
+  box-shadow:
+    0 0 60px 30px white,
+    0 0 20px 5px black, 
+    0 0 80px 40px white; 
+}
+
+@media only screen and (max-width: 600px) {
+	.glow {
+		box-shadow: none;
+	}
 }
