--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@ a {
 }
 
 
-.glow {
+/* .glow {
 	background-color: #fff;
   box-shadow:
     0 0 60px 30px white,
@@ -29,4 +29,6 @@ a {
 	.glow {
 		box-shadow: none;
 	}
-}
+} */
+
+
