add directory listings page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,18 +17,13 @@ a {
 }
 
 
-/* .glow {
-	background-color: #fff;
-  box-shadow:
-    0 0 60px 30px white,
-    0 0 20px 5px black, 
-    0 0 80px 40px white; 
+.directory-list {
+	padding: 00px 30px 0px 30px;
+	text-align: center;
 }
 
-@media only screen and (max-width: 600px) {
-	.glow {
-		box-shadow: none;
-	}
-} */
-
-
+.directory-list-item:hover {
+	text-decoration: unerline;
+	color: #2563EB;
+	cursor: pointer;
+}
